# PX4-Autopilot

./: .gitignore  .gitmodules  claude.md  claudes_gps_ppk_plan.md  claudes_plan.md  claudes_plan_final.md  claudes_research.md  claudes_research2.md  claudes_research3.md  flash_bms.sh  flash_bootloader.sh  notes.md  notes.txt  ppk_dual_gps_moving_base_research.md  ppk_investigation.md
.github/workflows/: build_all_targets.yml  cflite_batch.yml  checks.yml  clang-tidy.yml  compile_nuttx.yml  compile_ubuntu.yml  dev_container.yml  ekf_functional_change_indicator.yml  failsafe_sim.yml  flash_analysis.yml  mavros_mission_tests.yml  mavros_offboard_tests.yml  nuttx_env_config.yml  python_checks.yml  ros_translation_node.yml  sitl_tests.yml  stale.yml
ROMFS/px4fmu_common/init.d/: rc.mc_apps  rc.usb  rc.vtol_apps  rcS
ROMFS/px4fmu_common/init.d-posix/: CMakeLists.txt  px4-rc.mujoco  px4-rc.simulator  rcS
ROMFS/px4fmu_common/init.d-posix/airframes/: 1101_mujoco_skydio_x2  4001_gz_x500  CMakeLists.txt
ROMFS/px4fmu_common/init.d/airframes/: 4061_atl_mantis_edu
Tools/baro_compensation/: README.md  baro_thrust_calibration.py  motor_latency_analysis.py
boards/ark/bms/src/: CMakeLists.txt  bq40z80_startup.cpp  init.c
boards/ark/can-flow/: default.px4board
boards/ark/can-rtk-gps/: default.px4board  uavcan_board_identity
boards/ark/fmu-v6x/: default.px4board
boards/ark/fmu-v6x/src/: board_config.h  timer_config.cpp
boards/ark/pi6x/: default.px4board
boards/ark/teseo-gps/: default.px4board
boards/ark/teseo-gps/init/: rc.board_defaults  rc.board_sensors
boards/ark/teseo-gps/src/: init.c
boards/gearup/airbrainh743/: default.px4board
boards/holybro/kakutef7/: default.px4board
boards/holybro/kakuteh7/: default.px4board
boards/holybro/kakuteh7dualimu/: default.px4board
boards/holybro/kakuteh7mini/: default.px4board
boards/holybro/kakuteh7v2/: default.px4board
boards/px4/fmu-v2/: default.px4board
boards/px4/fmu-v5/: default.px4board
boards/px4/sitl/: mujoco.px4board
boards/watts/can-bms/: default.px4board  firmware.prototype  uavcan_board_identity
boards/watts/can-bms/init/: rc.board_sensors
boards/watts/can-bms/src/: board_config.h  boot.c  init.c
docs/en/advanced_config/: static_pressure_buildup.md
msg/: CMakeLists.txt  CanInterfaceStatus.msg  PpkRtcmData.msg  SensorAccelFifo.msg  SensorGps.msg  VehicleConstraints.msg  app_state.msg  button_pressed.msg  shutdown.msg  watts_battery_status.msg
msg/versioned/: VehicleCommand.msg
src/drivers/: drv_dshot.h  drv_sensor.h
src/drivers/barometer/bmp388/: bmp388.cpp
src/drivers/barometer/mpl3115a2/: MPL3115A2.cpp  MPL3115A2.hpp
src/drivers/barometer/ms5611/: MS5611.hpp
src/drivers/barometer/ms5837/: ms5837_registers.h
src/drivers/cdcacm_autostart/: CMakeLists.txt  Kconfig  cdcacm_autostart.cpp  cdcacm_autostart.h
src/drivers/dshot/: DShot.cpp
src/drivers/gps/: gps.cpp  params.c
src/drivers/optical_flow/paa3905/: PAA3905.cpp
src/drivers/optical_flow/paw3902/: PAW3902.cpp
src/drivers/teseo_gps/: CMakeLists.txt  Kconfig  NMEAParser.cpp  NMEAParser.hpp  module.yaml  teseo_gps.cpp  teseo_gps.h
src/drivers/teseo_gps/msgs/: GGA.hpp  GSA.hpp  GST.hpp  RMC.hpp  VTG.hpp
src/drivers/uavcan/: CMakeLists.txt  Kconfig  uavcan_main.cpp  uavcan_params.c
src/drivers/uavcan/sensors/: battery.cpp  battery.hpp  gnss.cpp  gnss.hpp  ppk_stream.cpp  ppk_stream.hpp  sensor_bridge.cpp  septentrio_sbf_tunnel.cpp  septentrio_sbf_tunnel.hpp  smart_battery.cpp  smart_battery.hpp
src/drivers/uavcannode/: Kconfig  UavcanNode.cpp  uavcannode_params.c
src/drivers/uavcannode/Publishers/: BatteryCells.hpp  BatteryContinuous.hpp  BatteryInfo.hpp  BatteryPeriodic.hpp  GnssFix2.hpp  PPKStream.hpp
src/drivers/watts/: CMakeLists.txt  Kconfig
src/drivers/watts/bms/: BQ34Z100.cpp  BQ34Z100.hpp  BQ76952.cpp  BQ76952.hpp  Bms.cpp  Bms.hpp  CMakeLists.txt  Kconfig  bms_params.c
src/drivers/watts/bq34z100/: BQ34Z100.cpp  BQ34Z100.hpp  CMakeLists.txt  Kconfig  bq34z100_main.cpp
src/drivers/watts/bq76952/: BQ34Z100.cpp  BQ34Z100.hpp  BQ76952.cpp  BQ76952.hpp  CMakeLists.txt  Kconfig  bms_params.c  bq76952_main.cpp
src/drivers/watts/ssd1306/: CMakeLists.txt  Kconfig  SSD1306.cpp  SSD1306.hpp  ssd1306_fonts.h  ssd1306_main.cpp
src/drivers/watts/ssd1306_display/: CMakeLists.txt  Display.cpp  Display.hpp  Kconfig  SSD1306_I2C.cpp  SSD1306_I2C.h  esp8266-oled-ssd1306  images.h
src/drivers/watts/watts_bms/: CMakeLists.txt  Kconfig  WattsBms.cpp  WattsBms.hpp  watts_bms_main.cpp
src/lib/collision_prevention/: CollisionPrevention.cpp  CollisionPrevention.hpp
src/lib/drivers/device/: Device.hpp
src/lib/drivers/smbus/: SMBus.hpp
src/lib/mixer_module/: mixer_module.hpp
src/lib/parameters/: param_translation.cpp
src/lib/sensor_calibration/: Accelerometer.hpp
src/modules/accel_fft/: AccelFFT.cpp  AccelFFT.hpp  CMakeLists.txt  Kconfig  parameters.yaml
src/modules/baro_thrust_estimator/: BaroThrustEstimator.cpp  BaroThrustEstimator.hpp  CMakeLists.txt  Kconfig  baro_thrust_cf_rls.cpp  baro_thrust_cf_rls.hpp  baro_thrust_cf_rls_test.cpp
src/modules/ekf2/: EKF2.cpp  EKF2.hpp  Kconfig  params_barometer.yaml  params_range_finder.yaml
src/modules/ekf2/EKF/: common.h  control.cpp  covariance.cpp  ekf.h  ekf_helper.cpp  estimator_interface.h  height_control.cpp  terrain_control.cpp
src/modules/ekf2/test/: CMakeLists.txt  test_EKF_baro_compensation.cpp  test_EKF_height_fusion.cpp
src/modules/logger/: logged_topics.cpp
src/modules/mavlink/: mavlink_log_handler.cpp  mavlink_log_handler.h  mavlink_main.cpp  mavlink_main.h  mavlink_messages.cpp  mavlink_parameters.cpp  mavlink_parameters.h  mavlink_params.c  mavlink_receiver.cpp  mavlink_receiver.h
src/modules/mc_pos_control/: multicopter_altitude_mode_params.c
src/modules/sensors/vehicle_acceleration/: VehicleAcceleration.cpp  VehicleAcceleration.hpp  imu_accel_parameters.c
src/modules/simulation/mujoco_simulator/: CMakeLists.txt  Kconfig  MujocoSimulator.cpp  MujocoSimulator.hpp  module.yaml  mujoco_env.sh.in  parameters.c
(+36 files in other folders)
